Bug 1287066 - Restore Layer::SetVisibleRegion behavior to fix invalidation bug. r=mstange

MozReview-Commit-ID: HcstO0EhiWz

--HG--
extra : rebase_source : 9b9f28a5b39a469ad7959ff053334f014acbc1e3